<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mendi10.conversor_unidades.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/conversor_distancia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="number"
                    android:maxLength="7"
                    android:id="@+id/editTextMetros"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:hint="Metros a:" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="Millas \nKilometros \nPulgadas"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <TextView
                android:id="@+id/textViewMetros"
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        </LinearLayout>

        <Button
            android:layout_marginTop="15dp"
            android:id="@+id/buttonCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="calcular_distancia"
            android:text="@string/calcular"/>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/conversor_temperatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="number"
                    android:maxLength="5"
                    android:id="@+id/editTextCentigrados"
                    android:layout_width="135dp"
                    android:layout_height="wrap_content"
                    android:hint="Centigrados a:" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginStart="6dp"
                android:textColor="#000000"
                android:textSize="15sp"
                android:id="@+id/textViewCen"
                android:layout_width="135dp"
                android:layout_height="wrap_content" />

         </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/buttonCalcularFar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcular_Farent"
                android:text="@string/farenheit"/>

            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/buttonCalcularKel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcular_Kelvin"
                android:text="@string/Kelvin"/>


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:inputType="number"
                    android:id="@+id/editTextFaren"
                    android:layout_width="135dp"
                    android:maxLength="5"
                    android:layout_height="wrap_content"
                    android:hint="Farenheit a:" />
            </android.support.design.widget.TextInputLayout>

            <TextView

                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:layout_marginStart="6dp"
                android:textSize="15sp"
                android:id="@+id/textViewFaren"
                android:layout_width="135dp"
                android:textColor="#000000"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <Button
                android:layout_marginTop="15dp"
                android:layout_marginEnd="52dp"
                android:id="@+id/buttonCalcularCent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calcular_Cent"
                android:text="@string/centigrados"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
